--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QLineEdit" name="firstName">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>10</y>
+      <x>140</x>
+      <y>420</y>
       <width>113</width>
       <height>24</height>
      </rect>
@@ -27,8 +27,8 @@
    <widget class="QLineEdit" name="lastName">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>40</y>
+      <x>140</x>
+      <y>450</y>
       <width>113</width>
       <height>24</height>
      </rect>
@@ -37,8 +37,8 @@
    <widget class="QLineEdit" name="email">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>70</y>
+      <x>130</x>
+      <y>490</y>
       <width>113</width>
       <height>24</height>
      </rect>
@@ -47,8 +47,8 @@
    <widget class="QLabel" name="txt_FirstName">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>10</y>
+      <x>60</x>
+      <y>430</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -60,8 +60,8 @@
    <widget class="QLabel" name="txt_LastName">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>40</y>
+      <x>60</x>
+      <y>460</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -73,8 +73,8 @@
    <widget class="QLabel" name="txt_email">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>70</y>
+      <x>40</x>
+      <y>490</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -86,8 +86,8 @@
    <widget class="QPushButton" name="submit">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>140</y>
+      <x>370</x>
+      <y>510</y>
       <width>80</width>
       <height>24</height>
      </rect>
@@ -99,8 +99,8 @@
    <widget class="QLineEdit" name="phoneNumber">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>100</y>
+      <x>130</x>
+      <y>520</y>
       <width>113</width>
       <height>24</height>
      </rect>
@@ -109,8 +109,8 @@
    <widget class="QLabel" name="txt_phoneNumber">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>100</y>
+      <x>40</x>
+      <y>520</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -122,10 +122,10 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>210</y>
+      <x>20</x>
+      <y>20</y>
       <width>331</width>
-      <height>251</height>
+      <height>381</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -134,18 +134,135 @@
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QWidget" name="staffProfile" native="true">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>240</y>
-      <width>86</width>
-      <height>29</height>
+      <x>400</x>
+      <y>30</y>
+      <width>341</width>
+      <height>371</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Deactivate</string>
-    </property>
+    <widget class="QLineEdit" name="emailProfile">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>80</y>
+       <width>113</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="txt_LastNameProfile">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>50</y>
+       <width>61</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Last Name:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="phoneNumberProfile">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>110</y>
+       <width>113</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="firstNameProfile">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>10</y>
+       <width>113</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="txt_FirstNameProfile">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>20</y>
+       <width>71</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>First Name:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lastNameProfile">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>40</y>
+       <width>113</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="txt_phoneNumberProfile">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>110</y>
+       <width>91</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Phone Number:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="txt_emailProfile">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>80</y>
+       <width>91</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>e-mail address:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>160</y>
+       <width>86</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Deactivate</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
