--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -159,19 +159,6 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QLabel" name="txt_LastNameProfile">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>50</y>
-       <width>61</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Last Name:</string>
-     </property>
-    </widget>
     <widget class="QLineEdit" name="phoneNumberProfile">
      <property name="geometry">
       <rect>
@@ -185,36 +172,10 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QLineEdit" name="firstNameProfile">
+    <widget class="QLineEdit" name="nameProfile">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>10</y>
-       <width>113</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QLabel" name="txt_FirstNameProfile">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>20</y>
-       <width>71</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>First Name:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lastNameProfile">
-     <property name="geometry">
-      <rect>
-       <x>120</x>
+       <x>70</x>
        <y>40</y>
        <width>113</width>
        <height>24</height>
@@ -250,7 +211,7 @@
       <string>e-mail address:</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="deactivateButton">
      <property name="geometry">
       <rect>
        <x>60</x>
@@ -271,7 +232,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
