--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -272,9 +272,9 @@
         <height>201</height>
        </rect>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QVBoxLayout" name="verticalLayout_clientList">
        <item>
-        <widget class="QListWidget" name="listWidget"/>
+        <widget class="QListWidget" name="clientListWidget"/>
        </item>
       </layout>
      </widget>
@@ -354,7 +354,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
