Added Phone Number Country Code

--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -369,14 +369,14 @@
      <widget class="QStackedWidget" name="NestedSideBarStackWidget">
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>30</y>
-        <width>331</width>
+        <x>340</x>
+        <y>50</y>
+        <width>381</width>
         <height>371</height>
        </rect>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="signupWidget">
        <widget class="QLineEdit" name="clientFirstName">
@@ -384,7 +384,7 @@
          <rect>
           <x>140</x>
           <y>150</y>
-          <width>113</width>
+          <width>171</width>
           <height>24</height>
          </rect>
         </property>
@@ -410,7 +410,7 @@
          <rect>
           <x>140</x>
           <y>180</y>
-          <width>113</width>
+          <width>171</width>
           <height>24</height>
          </rect>
         </property>
@@ -434,11 +434,14 @@
        <widget class="QLineEdit" name="clientPhoneNm">
         <property name="geometry">
          <rect>
-          <x>140</x>
+          <x>200</x>
           <y>210</y>
           <width>113</width>
           <height>24</height>
          </rect>
+        </property>
+        <property name="maxLength">
+         <number>14</number>
         </property>
         <property name="readOnly">
          <bool>false</bool>
@@ -462,7 +465,7 @@
          <rect>
           <x>140</x>
           <y>240</y>
-          <width>161</width>
+          <width>171</width>
           <height>24</height>
          </rect>
         </property>
@@ -523,6 +526,19 @@
         </property>
         <property name="text">
          <string>Make account</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="client_countryCodeDropDown">
+        <property name="geometry">
+         <rect>
+          <x>140</x>
+          <y>210</y>
+          <width>51</width>
+          <height>25</height>
+         </rect>
+        </property>
+        <property name="placeholderText">
+         <string>+1</string>
         </property>
        </widget>
       </widget>
@@ -675,7 +691,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
