--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -369,14 +369,14 @@
      <widget class="QStackedWidget" name="NestedSideBarStackWidget">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>350</x>
         <y>50</y>
-        <width>381</width>
+        <width>371</width>
         <height>371</height>
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="signupWidget">
        <widget class="QLineEdit" name="clientFirstName">
@@ -562,14 +562,47 @@
        <widget class="QLabel" name="txt_addBooking">
         <property name="geometry">
          <rect>
-          <x>80</x>
-          <y>50</y>
-          <width>62</width>
+          <x>20</x>
+          <y>40</y>
+          <width>111</width>
           <height>20</height>
          </rect>
         </property>
         <property name="text">
-         <string>Booking</string>
+         <string>Name of Employee:</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="employee_dropdrown">
+        <property name="geometry">
+         <rect>
+          <x>140</x>
+          <y>40</y>
+          <width>181</width>
+          <height>24</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_2">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>80</y>
+          <width>49</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Date:</string>
+        </property>
+       </widget>
+       <widget class="QCalendarWidget" name="calendarWidget">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>80</y>
+          <width>241</width>
+          <height>171</height>
+         </rect>
         </property>
        </widget>
       </widget>
@@ -691,7 +724,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
