--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -372,7 +372,7 @@
         <x>350</x>
         <y>50</y>
         <width>371</width>
-        <height>371</height>
+        <height>421</height>
        </rect>
       </property>
       <property name="currentIndex">
@@ -562,9 +562,9 @@
        <widget class="QLabel" name="txt_addBooking">
         <property name="geometry">
          <rect>
-          <x>20</x>
+          <x>0</x>
           <y>40</y>
-          <width>111</width>
+          <width>141</width>
           <height>20</height>
          </rect>
         </property>
@@ -582,7 +582,7 @@
          </rect>
         </property>
        </widget>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="txt_date">
         <property name="geometry">
          <rect>
           <x>60</x>
@@ -602,6 +602,42 @@
           <y>80</y>
           <width>241</width>
           <height>171</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="submitDateButton">
+        <property name="geometry">
+         <rect>
+          <x>250</x>
+          <y>260</y>
+          <width>91</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Submit Date</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="txt_date_2">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>290</y>
+          <width>49</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Time:</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="comboBox">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>290</y>
+          <width>121</width>
+          <height>28</height>
          </rect>
         </property>
        </widget>
@@ -724,7 +760,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
